# genshin.py

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: biweekly-release.yml  checks.yml  create-release.yml  docs.yml  monthly-release.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
authentication/: index.html
battle_chronicle/: index.html
caching/: index.html
calculator/: index.html
cli/: index.html
configuration/: index.html
credits/: index.html
daily_rewards/: index.html
debugging/: index.html
diary/: index.html
docs/: authentication.md  calculator.md  index.md
docs/reference/: utility.md
docs/reference/clients/: auth.md  calculator.md  chronicle.md  daily.md  diary.md  gacha.md  hoyolab.md  lineup.md  teapot.md  transaction.md  wiki.md
docs/reference/clients/chronicle/: genshin.md  honkai.md  hsr.md  zzz.md
docs/reference/models/auth/: cookie.md  geetest.md  qrcode.md  responses.md  verification.md
docs/reference/models/genshin/: calculator.md  character.md  daily.md  diary.md  gacha.md  lineup.md  teapot.md  transaction.md  wiki.md
docs/reference/models/honkai/: battlesuit.md
docs/reference/models/hoyolab/: accompany.md  announcements.md  mimo.md  private.md  record.md  web_event.md
docs/reference/models/starrail/: character.md  rpgsimulator.md
docs/reference/models/zzz/: character.md
genshin/: __init__.py  __main__.py  constants.py  errors.py  types.py
genshin/client/: cache.py  ratelimit.py  routes.py
genshin/client/components/: base.py  daily.py  gacha.py  hoyolab.py  transaction.py  wiki.py
genshin/client/components/auth/: client.py  server.py
genshin/client/manager/: managers.py
genshin/models/: model.py
genshin/models/genshin/: calculator.py  character.py  gacha.py  lineup.py
genshin/models/honkai/: battlesuit.py
genshin/models/hoyolab/: __init__.py  accompany.py  mimo.py
genshin/models/starrail/: character.py  rpgsimulator.py
genshin/models/zzz/: __init__.py  character.py  upgrade_guide.py
genshin/utility/: auth.py  ds.py  extdb.py  logfile.py  uid.py
hoyolab/: index.html
hsr_characters/: index.html
hsr_lineup/: index.html
lineup/: index.html
pdoc/genshin/: errors.html  index.html
pdoc/genshin/client/: cache.html  clients.html  compatibility.html  ratelimit.html
pdoc/genshin/models/: model.html
pdoc/genshin/utility/: ds.html  extdb.html
reference/clients/auth/: index.html
reference/clients/calculator/: index.html
reference/clients/daily/: index.html
reference/clients/diary/: index.html
reference/clients/gacha/: index.html
reference/clients/hoyolab/: index.html
reference/clients/lineup/: index.html
reference/clients/teapot/: index.html
reference/clients/transaction/: index.html
reference/clients/wiki/: index.html
reference/utility/: index.html
search/: search_index.json
tests/: conftest.py
tests/client/components/: test_calculator.py  test_diary.py  test_hoyolab.py  test_hsr_chronicle.py  test_teapot.py  test_transaction.py  test_wish.py  test_zzz_chronicle.py
transactions/: index.html
wish_history/: index.html
(+150 files in other folders)
