[project]
name = "genshin"
version = "1.7.20"
description = "API wrapper for HoYoLAB/Miyoushe API built on asyncio and pydantic."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["aiohttp==3.*", "pydantic==2.*", "tenacity==9.*"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
authors = [
    { name = "ashleney", email = "thesadru@gmail.com"}
]
maintainers = [
    { name = "seriaati", email = "seriaati@gmail.com" }
]

[project.optional-dependencies]
all = [
    "aiohttp-socks>=0.9.0",
    "aioredis>=2.0.1",
    "aiosqlite>=0.17.0",
    "browser-cookie3>=0.19.1",
    "click>=8.1.7",
    "qrcode[pil]>=7.4.2",
    "rsa>=4.9",
]
cookies = ["browser-cookie3>=0.19.1"]
auth = ["qrcode[pil]>=7.4.2", "rsa>=4.9"]
cli = ["click>=8.1.7"]
socks-proxy = ["aiohttp-socks>=0.9.0"]
redis = ["aioredis>=2.0.1"]
sqlite = ["aiosqlite>=0.17.0"]

[dependency-groups]
dev = ["nox>=2024.4.15"]
lint = ["ruff>=0.6.8"]
pytest = [
    "coverage[toml]>=7.6.1",
    "devtools>=0.12.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-dotenv>=0.5.2",
]
reformat = ["black>=24.8.0", "ruff>=0.6.8"]
typecheck = ["mypy>=1.11.2", "pyright>=1.1.382.post0", "types-click>=7.1.8"]
docs = [
    "mkdocs-material>=9.5.38",
    "pdoc3>=0.11.1",
    "mkdocstrings[python]>=0.29.1",
    "griffe-pydantic>=1.1.7",
]

[project.urls]
Homepage = "https://github.com/seriaati/genshin.py"
Documentation = "https://seriaati.github.io/genshin.py"
Repository = "https://github.com/seriaati/genshin.py.git"
Issues = "https://github.com/seriaati/genshin.py/issues"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["genshin"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["genshin"]
exclude = ["**/__init__.py", "tests/**"]

typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"   # This relies on ordering for keyword-only arguments
reportUnusedFunction = "none"               # Makes usage of validators impossible
reportPrivateUsage = "none"
reportUnknownMemberType = "none"
reportUntypedFunctionDecorator = "none"
reportIncompatibleVariableOverride = "none"

[tool.mypy]
warn_unreachable = false

disallow_untyped_defs = true
ignore_missing_imports = true

# pyright
warn_unused_ignores = false
warn_redundant_casts = false
allow_redefinition = true
disable_error_code = ["return-value"]

[tool.coverage.run]
source = ["genshin"]
omit = ["**/__init__.py", "**/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "cover"

[tool.uv.build-backend]
module-root = ""
